# scrybe

./: .gitignore  .npmignore  LICENSE  README.md  package.json  pyproject.toml  requirements.txt
npm/lib/: env.js  python.js  ui.js
npm/test/: clean.js  smoke.js
src/doc_to_hand/: __init__.py  cli.py  config.py  launcher.py  layout.py  normalize.py  parse_pdf.py  pipeline.py  webapp.py  wizard.py
src/doc_to_hand/fonts/: README.md
src/handscrybe/: __init__.py  cli.py  config.py  export.py  fonts.py  glyphs.py  launcher.py  layout.py  model.py  normalize.py  pipeline.py  progress.py  render.py  webapp.py  wizard.py
tests/: test_docx_input.py  test_export.py  test_glyphs.py  test_launcher.py  test_layout.py  test_pipeline.py  test_pipeline_new.py  test_webapp.py  test_wizard.py
