[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "handscrybe"
version = "0.3.0"
description = "Handscrybe turns typed documents (PDF/DOCX/TXT) into handwriting while preserving the original page layout."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "PyMuPDF==1.24.10",
    "python-docx==1.1.2",
    "lxml==5.3.0",
    "pdfplumber==0.11.4",
    "Pillow==12.3.0",
    "numpy==2.1.3",
    "Flask==3.1.0",
]

[project.scripts]
handscrybe = "handscrybe.cli:main"
handscrybe-web = "handscrybe.webapp:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# The bundled handwriting font lives inside the package so it resolves after a
# normal (non-editable) install, e.g. the npm-provisioned venv. Without this the
# .ttf would be dropped from the wheel and every conversion would fail.
handscrybe = ["fonts/*.ttf", "fonts/*.txt"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
